--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>de.joshizockt</groupId>
     <artifactId>ServerCheckerWebhook</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>dnsjava</groupId>
             <artifactId>dnsjava</artifactId>
-            <version>3.4.0</version>
+            <version>3.5.1</version>
         </dependency>
 
         <dependency>
